# pholimorpism_game

pholimorphizm_game/: CMakeLists.txt  class.hpp  draw_dragon.hpp  draw_hero.hpp  main.cpp  resources.qrc  show_gif.hpp  write_text.hpp
